--- a/app/src/main/res/layout/activity_vehicle_info.xml
+++ b/app/src/main/res/layout/activity_vehicle_info.xml
@@ -168,14 +168,17 @@
         app:layout_constraintVertical_bias="0.273" />
 
     <Button
-        android:layout_width="match_parent"
+        android:id="@+id/back_button_vehicleInfoActivity"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="Back"
-        android:id="@+id/back_button_vehicleInfoActivity"
+        android:backgroundTint="@color/startColor"
+        app:cornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/button2"
+        app:layout_constraintVertical_bias="0.850"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
