--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,16 +21,18 @@
         app:layout_constraintVertical_bias="0.132" />
 
     <LinearLayout
-        android:layout_width="403dp"
-        android:layout_height="302dp"
+        android:id="@+id/linearLayout2"
+        android:layout_width="390dp"
+        android:layout_height="236dp"
         android:background="@drawable/custom_edittext"
         android:backgroundTint="@color/white"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.303">
+        app:layout_constraintVertical_bias="0.201">
 
 
         <Button
@@ -40,13 +42,7 @@
             android:layout_gravity="center"
             android:backgroundTint="@color/startColor"
             android:text="Book a ride"
-            app:cornerRadius="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
-            app:layout_constraintVertical_bias="0.281" />
+            app:cornerRadius="20dp" />
 
         <Button
             android:id="@+id/add_vehicle_page_button"
@@ -68,6 +64,20 @@
 
 
     </LinearLayout>
+
+    <Button
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        app:cornerRadius="20dp"
+        android:text="Sign Out"
+        android:id="@+id/sign_out_button_mainPage"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.500"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        app:layout_constraintVertical_bias="0.850"
+        android:backgroundTint="@color/black"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
