--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -23,6 +23,7 @@
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="409dp"
+        android:paddingLeft="16dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,37 +45,45 @@
 
     <Button
         android:id="@+id/change_Role_Button"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="Update Profile"
+        app:cornerRadius="20dp"
+        android:backgroundTint="@color/startColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.500"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:layout_constraintVertical_bias="0.061" />
+        app:layout_constraintVertical_bias="0.34" />
 
     <Button
-        android:id="@+id/sign_out_button"
-        android:layout_width="match_parent"
+        android:id="@+id/sign_out_button_userPage"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/black"
         android:text="Sign Out"
+        app:cornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/change_Role_Button"
-        app:layout_constraintVertical_bias="0.819" />
+        app:layout_constraintVertical_bias="0.850" />
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Back"
         android:id="@+id/back_button_userProfileActivity"
-        app:layout_constraintBottom_toTopOf="@+id/sign_out_button"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/startColor"
+        android:text="Back"
+        app:cornerRadius="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/sign_out_button_userPage"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.500"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/change_Role_Button" />
+        app:layout_constraintTop_toBottomOf="@+id/change_Role_Button"
+        app:layout_constraintVertical_bias="0.250" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
