--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:background="@drawable/gradient_background"
     tools:context=".MainActivity">
 
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
@@ -16,54 +17,72 @@
         android:textSize="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.132" />
+        app:layout_constraintVertical_bias="0.097" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="390dp"
-        android:layout_height="236dp"
-        android:background="@drawable/custom_edittext"
-        android:backgroundTint="@color/white"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+
+    <Button
+        android:id="@+id/book_ride_button"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:backgroundTint="@color/startColor"
+        android:text="Book a ride"
+        app:cornerRadius="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/add_vehicle_page_button_main"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.201">
+        app:layout_constraintVertical_bias="0.489" />
 
+    <Button
+        android:id="@+id/add_vehicle_page_button_main"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="120dp"
+        android:backgroundTint="@color/startColor"
+        android:text="Add a vehicle"
+        app:cornerRadius="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/user_profile_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.103" />
 
-        <Button
-            android:id="@+id/book_ride_button"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:backgroundTint="@color/startColor"
-            android:text="Book a ride"
-            app:cornerRadius="20dp" />
+    <Button
+        android:id="@+id/user_profile_button"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="212dp"
+        android:backgroundTint="@color/startColor"
+        android:text="Update User Profile"
+        app:cornerRadius="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/sign_out_button_mainPage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.0" />
 
-        <Button
-            android:id="@+id/add_vehicle_page_button_main"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:backgroundTint="@color/startColor"
-            android:text="Add a vehicle"
-            app:cornerRadius="20dp" />
-
-        <Button
-            android:id="@+id/user_profile_button"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:backgroundTint="@color/startColor"
-            android:text="User Profile"
-            app:cornerRadius="20dp" />
-
-
-    </LinearLayout>
+    <Button
+        android:id="@+id/profile_button"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/startColor"
+        android:text="Profile"
+        app:cornerRadius="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/sign_out_button_mainPage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/user_profile_button"
+        app:layout_constraintVertical_bias="0.288" />
 
     <Button
         android:layout_width="300dp"
@@ -75,7 +94,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.500"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
         app:layout_constraintVertical_bias="0.850"
         android:backgroundTint="@color/black"/>
 
