--- a/app/src/main/res/layout/email_item.xml
+++ b/app/src/main/res/layout/email_item.xml
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="email"
-            android:id="@+id/phone_number"
+            android:id="@+id/email_profilePage"
             android:textColor="@color/black"
             android:layout_marginStart="25dp"
             android:layout_marginBottom="15dp"
