--- a/app/src/main/res/layout/phone_item.xml
+++ b/app/src/main/res/layout/phone_item.xml
@@ -28,7 +28,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Mobile"
+                android:text="Owned Vehicles"
                 android:layout_marginStart="10dp"
                 android:textSize="14sp"
                 android:textStyle="bold"
@@ -40,8 +40,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="phone number"
-            android:id="@+id/phone_number"
+            android:text="owned vehicles"
+            android:id="@+id/ownedvehicles_profilePage"
             android:textColor="@color/black"
             android:layout_marginStart="25dp"
             android:layout_marginBottom="15dp"
