--- a/app/src/main/res/layout/personal_info_item.xml
+++ b/app/src/main/res/layout/personal_info_item.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="20dp"
     app:cardElevation="10dp"
     app:cardUseCompatPadding="true">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,7 +37,8 @@
                 android:id="@+id/uid_profilePage"
                 android:textAlignment="center"
                 android:textStyle="bold"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textColor="@color/black"/>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="10dp"/>
@@ -50,10 +51,9 @@
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Usertype"
-
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:textSize="16sp"
@@ -62,7 +62,7 @@
                 android:layout_weight="1"/>
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Rides taken"
                 android:layout_weight="1"
@@ -78,8 +78,6 @@
             android:layout_width="match_parent"
             android:layout_height="25dp"/>
 
-
     </LinearLayout>
-
 
 </androidx.cardview.widget.CardView>
