--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -68,6 +68,17 @@
                 android:backgroundTint="@color/startColor"
                 app:cornerRadius = "20dp"/>
 
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:text="Sign up with Google"
+                android:id="@+id/signup_google_button"
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:layout_marginTop="8dp"
+                android:backgroundTint="@color/startColor"
+                app:cornerRadius = "20dp"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
